--- a/cricket_athletix.html
+++ b/cricket_athletix.html
@@ -11,6 +11,7 @@
        body {
             margin: 0;
             font-family: Arial, sans-serif;
+            background-color:#000;
         }
 
         .header {
@@ -240,6 +241,14 @@
             object-fit: contain;
         }
 
+        .collection-heading {
+            text-align: center;
+            font-size: 3em;
+            margin: 40px 0 20px;
+            color: white;
+            background-color: #000;
+        }
+
     </style>
 </head>
 
@@ -270,9 +279,10 @@
         </div>
     </div>
 
+    <h1 class="collection-heading">Make More Boundries with Athletix</h1>
 
     <div class="main-content">
-        <h1>Make More Boundries with Athletix</h1>
+        
         <div class="product-grid">
             <div class="product-card">
                 <a href="cricket_product1.html">
