--- a/football_athletix.html
+++ b/football_athletix.html
@@ -4,14 +4,14 @@
 <head>
     <title>Football - Athletix</title>
     <style>
-        <style>
         * {
             font-family: Arial, sans-serif;
-       }
+        }
  
        body {
             margin: 0;
             font-family: Arial, sans-serif;
+            background-color:#000;
         }
 
         .header {
@@ -241,6 +241,14 @@
             object-fit: contain;
         }
 
+        .collection-heading {
+            text-align: center;
+            font-size: 3em;
+            margin: 40px 0 20px;
+            color: white;
+            background-color: #000;
+        }
+
     </style>
 </head>
 
@@ -272,8 +280,10 @@
         </div>
     </div>
 
+    <h1 class="collection-heading">More Goals with Athletix</h1>
+
     <div class="main-content">
-        <h1>More Goals with Athletix</h1>
+        
         <div class="product-grid">
             <div class="product-card">
                 <a href="football_product1.html">
