--- a/homepage.html
+++ b/homepage.html
@@ -315,7 +315,7 @@
     <footer>
         <div class="promo-banner">
             <p>JOIN Athletix AND GET 10% OFF</p>
-            <button>Sign Up for Free →</button>
+            <button  onclick=login&signup.html>Sign Up for Free →</button>
         </div>
         <div class="footer-content">
             <div class="footer-column">
