--- a/men_product7.html
+++ b/men_product7.html
@@ -347,7 +347,9 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart()">Add to Bag</button>
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="007" data-name="Nike Kids T-shirt" data-price="129.99">
+  		        Add to Bag
+	        </button>
         </div>
       </div>
     </div>
@@ -423,46 +425,7 @@
     </div>
   </footer>
 
-  <script>
-    let selectedSize = null;
-
-    function changeImage(element) {
-      document.getElementById('mainImage').src = element.src;
-      document.querySelectorAll('.thumbnail').forEach(thumb => {
-        thumb.classList.remove('active');
-      });
-      element.classList.add('active');
-    }
-
-    function selectSize(element) {
-      document.querySelectorAll('.size-option').forEach(option => {
-        option.classList.remove('selected');
-      });
-      element.classList.add('selected');
-      selectedSize = element.textContent;
-    }
-
-    function addToCart() {
-      if (!selectedSize) {
-        alert('Please select a size before adding to bag!');
-        return;
-      }
-
-      const product = {
-        id: 007,
-        name: "Gym Trainers",
-        price: 4299,
-        size: selectedSize,
-        quantity: 1,
-        image: document.getElementById('mainImage').src
-      };
-
-      let cart = JSON.parse(localStorage.getItem('cart')) || [];
-      cart.push(product);
-      localStorage.setItem('cart', JSON.stringify(cart));
-
-      alert(`Added to bag: ${product.name} (Size ${selectedSize})`);
-    }
+  <script src ="auth.js">
   </script>
 </body>
 </html>
