--- a/basketball_product1.html
+++ b/basketball_product1.html
@@ -393,7 +393,9 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart()">Add to Bag</button>
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="501" data-name="Nike Kids T-shirt" data-price="129.99">
+  		        Add to Bag
+	        </button>
         </div>
 
         
