--- a/basketball_product2.html
+++ b/basketball_product2.html
@@ -392,8 +392,10 @@
           </div>
         </div>
 
-        <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart()">Add to Bag</button>
+       <div class="add-to-bag-container">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="502" data-name="Nike Kids T-shirt" data-price="129.99">
+  		        Add to Bag
+	        </button>
         </div>
 
         
