--- a/football_product1.html
+++ b/football_product1.html
@@ -364,21 +364,21 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/fb0e75cf-13ce-40bb-99bf-2406fa913844/AS+M+NK+DF+RISE+365+RUN+ENERGY.png" alt="Nike Air Max 270" />
+        <img id="mainImage" class="main-image" src="https://store.liverpoolfc.com/media/catalog/product/p/l/plwin_mens_match_1.jpg" alt="Liverpool 24-25 home kit" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/fb0e75cf-13ce-40bb-99bf-2406fa913844/AS+M+NK+DF+RISE+365+RUN+ENERGY.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/ikryvczkqlnhq1wqkqgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://store.liverpoolfc.com/media/catalog/product/m/e/mens-match_back.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJ3z3f9V0xiKIjw3Y2DQVy4yTnzJQK_VZuJA&s" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://kitnation.co.za/cdn/shop/files/IMG_8639_400x.jpg?v=1721211465" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://www.icons.com/media/catalog/product/cache/15cebca97e59bef64f61d5558d86d273/i/3/i3470_-_trent_alexander-arnold_back_signed_liverpool_2024-25_home_shirt_-_icons_1.webp" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Nike Air Football T-Shirt</h1>
-        <h2>$129.99</h2>
+        <h1>Liverpool 24-25 Home Jersey</h1>
+        <h2>₹1300.00</h2>
 
-        <p><strong>Description:</strong> The Nike Air Football T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric made for all-day comfort. The breathable material provides a lightweight feel.</p>
+        <p><strong>Description:</strong>Defend like Virgil Van Dijk with this home kit from Anfield Liverpool</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -393,7 +393,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="401" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="401" data-name="Liverpool 24-25 Home Jersey" data-price="₹1300.00">
   		        Add to Bag
 	        </button>
         </div>
