--- a/men_product6.html
+++ b/men_product6.html
@@ -373,75 +373,57 @@
   </div>
 
   <footer>
-    <div class="promo-banner">
-        <p>JOIN Athletix AND GET 10% OFF</p>
-        <button>Sign Up for Free →</button>
-    </div>
-    <div class="footer-content">
-        <div class="footer-column">
-            <h3>PRODUCTS</h3>
-            <ul>
-                <li>Footwear</li>
-                <li>Clothing</li>
-                <li>Accessories</li>
-                <li>Outlet-Sale</li>
-                <li>New Arrivals</li>
-                <li>Flat 50% Off!</li>
-            </ul>
+        <div class="promo-banner">
+            <p>JOIN Athletix AND GET 10% OFF</p>
+            <button>Sign Up for Free →</button>
         </div>
-        <div class="footer-column">
-            <h3>SPORTS</h3>
-            <ul>
-                <li>Running</li>
-                <li>Basketball</li>
-                <li>Football</li>
-                <li>Gym/Training</li>
-                <li>Tennis</li>
-                <li>Golf</li>
-            </ul>
-        </div>
-        <div class="footer-column">
-            <h3>COLLECTIONS</h3>
-            <ul>
-                <li>Air Max</li>
-                <li>Air Force</li>
-                <li>Air Jordan</li>
-                <li>Dunk</li>
-                <li>React</li>
-            </ul>
-        </div>
-        <div class="footer-column">
-            <h3>SUPPORT</h3>
-            <ul>
-                <li>Help</li>
-                <li>Customer Service</li>
-                <li>Returns & Exchanges</li>
-                <li>Shipping</li>
-                <li>Order Tracker</li>
-            </ul>
-        </div>
-        <div class="footer-column">
-            <h3>COMPANY INFO</h3>
-            <ul>
-                <li>About Us</li>
-                <li>Athletix Apps</li>
-                <li>Entity Details</li>
-                <li>Press</li>
-                <li>Careers</li>
-            </ul>
-        </div>
-        <div class="footer-column social">
-            <h3>FOLLOW US</h3>
-            <p>📷 Instagram</p>
-            <p>🐦 Twitter</p>
-        </div>
-    </div>
-    <div class="footer-bottom">
-        <p>Privacy Policy | Terms and Conditions | Cookies</p>
-        <p>©2025 ATHLETIX India Marketing Pvt. Ltd</p>
-    </div>
-  </footer>
+        <div class="footer-content">
+            <div class="footer-column">
+                <h3>CATEGORIES</h3>
+                <ul>
+                    <li><a href="men_athletix.html">Men</a></li>
+                    <li><a href="women_athletix.html">Women</a></li>
+                    <li><a href="kids_athletix.html">Kids</a></li>
+                    <li><a href="shoes_athletix.html">Shoes</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>SPORTS</h3>
+                <ul>
+                    <li><a href="cricket_athletix.html">Cricket</a></li>
+                    
+                    <li><a href="football_athletix.html">Football</a></li>
+                    <li><a href="basketball_athletix.html">Basketball</a></li>
+                </ul>
+            </div>
 
+            <div class="footer-column">
+                <h3>SUPPORT</h3>
+                <ul>
+                    <li><a href="help.html">Help</a></li>
+                    <li><a href="customer.html">Customer Service</a></li>
+                    <li><a href="return.html">Returns & Exchanges</a></li>
+                    <li><a href="shipping.html">Shipping</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>COMPANY INFO</h3>
+                <ul>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="entity.html">Entity Details</a></li>
+                </ul>
+            </div>
+            <div class="footer-column social">
+                <h3>FOLLOW US</h3>
+                <p><a href="https://www.instagram.com" target="_blank">📷 Instagram</a></p>
+                <p><a href="https://www.twitter.com" target="_blank">🐦‍⬛ X</a></p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>Privacy Policy | Terms and Conditions | Cookies</p>
+            <p>©2025 ATHLETIX India Marketing Pvt. Ltd</p>
+        </div>
+    </footer>
   <script src ="auth.js">
   </script>
 </body>
