--- a/homepage.html
+++ b/homepage.html
@@ -271,23 +271,23 @@
 
     <div class="product-grid">
         <div class="product-card">
-            <a href="men_product2.html">
-                <img src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/bba09c80cdf3416c9957d5ea0dee0738_9366/Real_Madrid_24-25_Home_Jersey_White_IU5011_HM1.jpg" alt="Training Shoes">
-                <h3>Real Madrid 99/00 Home Jersey</h3>
+            <a href="football_product2.html">
+                <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/3edb7009-57af-4070-9ab9-69e18d85670c/PSG+M+NK+DF+JSY+SS+STAD+HM.png" alt="Training Shoes">
+                <h3>Nike PSG 24-25 Home kit</h3>
             </a>
             <p>₹5,299</p>
         </div>
         <div class="product-card">
             <a href="basketball_product1.html">
                 <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/14287f1a-096a-4dae-9a31-0416f34e95de/LEBRON+XXII+EP.png" alt="Casual Shoes">
-                <h3>Manchester United UBP Tee</h3>
+                <h3>LeBRon XXII's</h3>
             </a>
             <p>₹3,999</p>
         </div>
         <div class="product-card">
             <a href="football_product5.html">
                 <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/704fa294-9e65-42c1-9716-024d2996aaff/SIG+ATHLETE+-+SU25.png" alt="High Tops">
-                <h3>High-Top Sneakers</h3>
+                <h3>Mbappe Academy Ball</h3>
             </a>
             <p>₹4,799</p>
         </div>
