--- a/basketball_athletix.html
+++ b/basketball_athletix.html
@@ -268,16 +268,17 @@
             </div>
         </div>
         <div class="help-signup">
-            <a href="#">Help</a>
-            <a href="#">Orders</a>
-            <a href="#">Log In</a>
+            <a href="help.html">Help</a>
+            <a href="orders.html">Orders</a>
+            <a href="login&signup.html">Log In</a>
             <div class="logo">
                 <a href="cart.html">
                     <img src="cart.jpeg" alt="Cart" class="cart-icon">
                 </a>
             </div>
         </div>
-    </div>
+   
+
 
     </div>
 
