--- a/cricket_athletix.html
+++ b/cricket_athletix.html
@@ -268,9 +268,9 @@
             </div>
         </div>
         <div class="help-signup">
-            <a href="#">Help</a>
-            <a href="#">Orders</a>
-            <a href="#">Log In</a>
+            <a href="help.html">Help</a>
+            <a href="orders.html">Orders</a>
+            <a href="login&signup.html">Log In</a>
             <div class="logo">
                 <a href="cart.html">
                     <img src="cart.jpeg" alt="Cart" class="cart-icon">
@@ -278,6 +278,7 @@
             </div>
         </div>
     </div>
+
 
     <h1 class="collection-heading">Make More Boundries with Athletix</h1>
 
