--- a/football_athletix.html
+++ b/football_athletix.html
@@ -269,9 +269,9 @@
             </div>
         </div>
         <div class="help-signup">
-            <a href="#">Help</a>
-            <a href="#">Orders</a>
-            <a href="#">Log In</a>
+            <a href="help.html">Help</a>
+            <a href="orders.html">Orders</a>
+            <a href="login&signup.html">Log In</a>
             <div class="logo">
                 <a href="cart.html">
                     <img src="cart.jpeg" alt="Cart" class="cart-icon">
@@ -279,6 +279,7 @@
             </div>
         </div>
     </div>
+
 
     <h1 class="collection-heading">More Goals with Athletix</h1>
 
